# bogen-bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  TODO.md  bot.py  character_sheet.py  create_venv.sh  example.csv  gapi.py  mypy.ini  pyproject.toml  requirements.txt
src/: app_config.py  bot.py
src/injectors/: config.py
tests/: test_bogen_bot.py
