[tool.poetry]
name = "bogen-bot"
version = "0.1.0"
description = ""
authors = ["Jaezred <dark-ninja@web.de>"]

[tool.poetry.dependencies]
python = "^3.9"
python-dotenv = "^0.19.2"
discord = "^1.7.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
